--- a/src/componds/common/Header/Header.css
+++ b/src/componds/common/Header/Header.css
@@ -38,7 +38,7 @@
   
   header .navbar .navbar-brand a {
     font-size: 26px;
-    color: var(--white);
+    color: var(--black);
     line-height: 150%;
     font-family: var(--fontFamily1);
     font-weight: bold;
@@ -108,5 +108,14 @@
   
   
   
+  }
+  slider .carousel::after {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
   
