--- a/src/componds/common/Banner/Banner.css
+++ b/src/componds/common/Banner/Banner.css
@@ -6,8 +6,6 @@
     position: relative;
 
 }
-
-
 .slider .carousel .carousel-item .carousel-caption {
     z-index: 9;
     bottom: 20%;
@@ -26,7 +24,7 @@
   }
 
   .slider .carousel .carousel-item .carousel-caption p  {
-    font-size: var(--smallText);
+    font-size: 20px;
     color: var(--white);
     letter-spacing: 2px;
     display: block;
@@ -36,10 +34,75 @@
 .slider .carousel .carousel-control-prev,
 .slider .carousel .carousel-control-next {
     position: absolute;
-    top: 45%;
+    top: 35%;
     width: 50px;
     height: 50px;
     background: var(--primaryClr);
     border-radius: 50%;
-    
+    cursor: pointer;
+
 }
+
+.slider .carousel .carousel-control-prev {
+  position: absolute;
+    left: 10%;
+
+}
+.slider .carousel .carousel-control-next {
+  position: absolute;
+    right: 10%;
+
+}
+
+.slider .carousel .carousel-control-prev:hover,
+.slider .carousel .carousel-control-next:hover {
+  box-shadow: 0 0 0 1rem rgba(255, 255, 255, 0.267);
+}
+
+.slicer1-postions {
+  position: absolute;
+    top: -419px;
+}
+
+.slicer-2-postions{
+  position: absolute;
+    top: -550px;
+
+}
+.slider_des h5{
+  font-family: "Faculty Glyphic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+
+}
+.slider_des p {
+  font-family: "Faculty Glyphic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+}
+
+@media only screen and (max-width:991px){
+  
+  
+  .slider .carousel .carousel-item .carousel-caption {
+    bottom: 20%;
+  }
+
+  .slider .carousel .carousel-item .carousel-caption h5 {
+    font-size: 35px;
+  }
+  .slider .carousel .carousel-item .carousel-caption .slider_des p {
+    font-size: 16px;
+  }
+
+  
+}
+
+/* @media only screen and (max-width: 767px){
+  .slider .carousel .carousel-item img {
+    height: 350px;
+    object-fit: fill;
+  }
+} */
