--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,14 @@ table {
 .font-bold{
 	font-weight: 800 !important;
 }
+.App {
+	min-width: 420px;
+}
+.Container{
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0.937rem;
+	padding-right: 0.937rem;
+	max-width: 1200px;
+	
+}
